--- a/styles/style.css
+++ b/styles/style.css
@@ -81,3 +81,47 @@ header{
 .banner-btn a{
     text-decoration: none;
 }
+
+/* -----------------------action----------------- */
+.action{
+    max-width: 1440px;
+    margin:  auto;
+    margin-top: 200px;
+    margin-bottom: 200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+ .action-contant h1{
+    font-size: 42px;
+    font-weight: bold;
+ }
+ .action p{
+    color: #54535a;
+    font-size: 24px;
+    margin-top: 23px;
+ }
+ .action-btn{
+    margin-top: 23px;
+    font-size: 18px;
+    padding: 10px 25px;
+    font-weight: bold;
+    background-color: #4E47FF;
+    border-radius: 10px;
+    border: 0px;
+    color: white;
+ }
+ .action-btn a{
+    text-decoration: none;
+ }
+ .action-btn:hover{
+    background-color: rgba(172, 255, 47, 0.952);
+    box-shadow: 10px 10px 5px rgba(157, 157, 157, 0.861);
+    color: black;
+    transition: background-color 1s ease-in;
+    cursor: pointer;
+}
+.action-img img{
+    width: 100%;
+    border-radius: 40px;
+}
