--- a/styles/style.css
+++ b/styles/style.css
@@ -155,3 +155,52 @@ header{
 .user-count p{
     color: #969696;
 }
+
+/* -------------------------user comment--------- */
+
+.user-comment{
+    max-width: 1440px;
+    margin:  auto;
+    margin-bottom: 200px;
+}
+.user-comment-heading{
+    font-size: 42px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.user-card{
+    display: flex;
+    gap: 30px;
+}
+.card{
+    background-color: rgb(248, 248, 248);
+    padding: 24px;
+    width: 30%;
+    border-radius: 10px;
+}
+.card-title{
+    margin-top: 24px;
+    margin-bottom: 24px;
+
+}
+.card-title h1{
+    font-size: 25px;
+    font-weight: bold;
+}
+.card-img{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+.card-img h3{
+    color: #B3B3B3;
+}
+.card-img p{
+    color: #B3B3B3;
+}
+.card-img img{
+    width: 100%;
+    height: 55px;
+    border-radius: 30px;
+}
