--- a/styles/style.css
+++ b/styles/style.css
@@ -97,7 +97,7 @@ header{
     font-weight: bold;
  }
  .action p{
-    color: #54535a;
+    color: #b5b4b8;
     font-size: 24px;
     margin-top: 23px;
  }
@@ -174,7 +174,7 @@ header{
     gap: 30px;
 }
 .card{
-    background-color: rgb(248, 248, 248);
+    background-color: rgb(240, 237, 237);
     padding: 24px;
     width: 30%;
     border-radius: 10px;
@@ -302,4 +302,31 @@ header{
     color: black;
     transition: background-color 1s ease-in;
     cursor: pointer;
+}
+
+/* -----------------footer---------- */
+
+.footer-heading{
+    font-size: 100px;
+    font-weight: 900;
+    color: #4E47FF;
+    text-align: center;
+}
+.footer-description{
+    font-size: 20px;
+    color: #8987A1;
+    margin-top: 20px;
+    text-align: center;
+}
+.footer-link{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 100px;
+}
+.footer-link a{
+    text-decoration: none;
+    font-size: 20px;
+    color: #8987A1;
+    margin-top: 20px;
 }
